# stepwise-privacy-cards

./: .gitignore  CITATION.cff  ENVIRONMENT.md  LICENSE  METHODOLOGY.md  Makefile  PRIVACY_EXPLORER_MAP.md  README.md  SCHEMAS.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
card/: battery_expected.json  example_chain.json
docs/: ENVIRONMENT.md  METHODOLOGY.md  PRIVACY_EXPLORER_MAP.md  SCHEMAS.md  THREAT_MODEL.md
flta_eval/: __init__.py  attacks.py  audit.py  chains.py  datasets.py  fl.py  fl_torch.py  pods.py  rules.py
notebooks/: 00_walkthrough.ipynb  README.md
notebooks/sq1-calibration/: 01_mia_per_record_sweep.ipynb  02_gradient_inversion.ipynb  03_canary_audit.ipynb  04_sota_calibration.ipynb
notebooks/sq2-metadata/: 01_per_subject_fidelity.ipynb
notebooks/sq3-composability/: 01_rule_battery.ipynb
notebooks/sq5-comparison/: 01_scalar_vs_stepwise.ipynb
paper/figures/: fig1.mmd
results/: accountant_comparison.json
scripts/: compare_accountants.py  multi_seed_sq5.py  prepare.py
solid_deploy/: README.md  docker-compose.yml  populate.py
solid_deploy/css-config/: dynamic-pods.json
